# atulya

./: .env.example  .gitignore  AGENTS.md  BRAIN.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  brain.patent.md  brand_identity.html  brand_identity_ATULYA_EIGHT_engine.html  package-lock.json  package.json  pyproject.toml
atulya/: README.md  pyproject.toml
atulya-brain/: Cargo.toml  LICENSE  README.md
atulya-brain/patent/: BRAIN_Patent_Draft.md
atulya-brain/src/: lib.rs
atulya-bridge/: README.md  pyproject.toml
atulya-bridge/atulya_bridge/: __init__.py  cli.py  snapshot.py
atulya-bridge/tests/: test_cli.py  test_snapshot.py
atulya-cortex/: CODE_OF_CONDUCT.md  LICENSE.md  README.md  REVIEW.md  brain.py  directory_index.json  directory_structure.txt  pyproject.toml  query_directory.py  setup.py
atulya-cortex/.cursor/rules/: brain.mdc
atulya-cortex/.githooks/: pre-commit
atulya-cortex/blackbox/: README.md
atulya-cortex/brain/: README.md
atulya-cortex/brain/attention_network/: README.md
atulya-cortex/brain/basal_ganglia/: README.md  __init__.py
atulya-cortex/brain/brainstem/: README.md  heartbeat.py
atulya-cortex/brain/cerebellum/: README.md  __init__.py
atulya-cortex/brain/corpus_callosum/: README.md
atulya-cortex/brain/cortex/: README.md
atulya-cortex/brain/default_mode_network/: README.md  __init__.py
atulya-cortex/brain/limbic_system/: README.md
atulya-cortex/brain/neuroplasticity/: README.md  __init__.py
atulya-cortex/brain/thalamus/: README.md  __init__.py
atulya-cortex/brainstem/: __init__.py  breathing.py  heartbeat.py  reflexes.py  router.py
atulya-cortex/bridge/: README.md
atulya-cortex/communication/: README.md
atulya-cortex/consciousness/: README.md  foundational_memory.json  self_awareness.py
atulya-cortex/cortex/: __init__.py  __main__.py  _runtime.py  affect.py  bus.py  cli.py  config.py  consolidation.py  conversation.py  cortex.py  diagnostics.py  env_loader.py  episodes.py  home.py  language.py  peer_banks.py  peer_memory.py  peer_mental_model_store.py  personality.py  plasticity_prompt_memory.py  profile.py  self_healing.py  semantic_facts.py  setup_wizard.py  skills.py  skills_sync.py  tool_protocol.py  tui_app.py
atulya-cortex/cortex/cli_commands/: __init__.py  chat.py  config.py  doctor.py  model.py  pairing.py  peer_bank.py  plasticity.py  profile.py  setup.py  skills.py  whatsapp.py
atulya-cortex/cortex/templates/: config.toml  persona.md
atulya-cortex/cortex/tui/: __init__.py  app.py  theme.py  types.py
atulya-cortex/docs/: 01_source_mapping.md  02_biomimetic_charter.md  03_whatsapp.md
atulya-cortex/dream/: __init__.py  consolidation.py  skill_distill.py
atulya-cortex/dump_yard/: README.md  book.md  process_0001.md  project_starter.py  setup.py
atulya-cortex/energy/: README.md
atulya-cortex/entanglement/: README.md
atulya-cortex/evolution/: README.md  __init__.py  error_log.json  evolution_tracker.py  fitness_evaluator.py  fitness_metrics.json  run_evolution.py  self_corrector.py  self_evolution_engine.py
atulya-cortex/integration/: README.md
atulya-cortex/learning/: README.md
atulya-cortex/life/: .automation_config.json  .metadata.json  .metadata_index.json  .search_index.json
atulya-cortex/life/00_inbox/: .metadata.json  README.md
atulya-cortex/life/01_actions/: .metadata.json  README.md
atulya-cortex/life/02_planning/: .metadata.json  README.md
atulya-cortex/life/03_systems/: .metadata.json  README.md
atulya-cortex/life/04_life_stages/: .metadata.json  README.md
atulya-cortex/life/05_resources/: .metadata.json  README.md
atulya-cortex/life/06_tools/: .metadata.json  README.md
atulya-cortex/life/07_media/: .metadata.json  README.md
atulya-cortex/life/10_work/: .metadata.json  README.md
atulya-cortex/life/15_community/: .metadata.json  README.md
atulya-cortex/life/20_personal/: .metadata.json  README.md
atulya-cortex/life/25_family/: .metadata.json  README.md
atulya-cortex/life/30_learning/: .metadata.json  README.md
atulya-cortex/life/35_projects/: .metadata.json  README.md
atulya-cortex/life/40_knowledge/: .metadata.json  README.md
atulya-cortex/memory/: README.md  __init__.py  emotional.py  episodic.py  hippocampus.py  in_memory.py  procedural.py  recall.py  semantic.py  substrate.py  working_memory.py
atulya-cortex/motors/: README.md  __init__.py  fine_motor_skills.py  messaging.py  movement.py  speech.py
atulya-cortex/plasticity/: __init__.py  attention_network.py  compiler.py  engine.py  gradient.py  metric.py  program.py  signature.py  store.py
atulya-cortex/quantum/: README.md  __init__.py  coherence.py  decoherence.py  entanglement.py  superposition.py
atulya-cortex/scripts/: attention_network_local_test.sh  brain_edit_guard.py
atulya-cortex/sensors/: README.md  __init__.py  hearing.py  telegram.py  tui.py  vision.py  whatsapp.py
atulya-cortex/silo/: README.md  __init__.py  embedding_cache.py  llm_cache.py  state.py
atulya-cortex/tests/: README.md  test_attention_network.py  test_channels.py  test_cli_dispatcher.py  test_conversation.py  test_cortex_loop.py  test_deliberation.py  test_diagnostics_and_cli.py  test_dream.py  test_get_all_entites.py  test_home_config.py  test_internet_serp_block.py  test_memory.py  test_memory_brain.py  test_peer_bank_cli.py  test_peer_banks.py  test_peer_memory_entities.py  test_peer_memory_raw_backup.py  test_plasticity.py  test_setup_wizard.py  test_silo_quantum.py  test_skeleton.py  test_tui_command_registry.py  test_tui_handlers.py  test_tui_plugin_registry.py  test_tui_theme.py  test_whatsapp_cli.py
atulya-cortex/tools/: README.md
atulya-cortex/utils/: README.md  directory_index.py
atulya-desktop/src-tauri/: Cargo.toml  tauri.conf.json
atulya-integrations/crewai/: README.md  pyproject.toml  test_manual.py
atulya/atulya/: __init__.py  api_namespaces.py  client_wrapper.py  embedded.py  server.py
atulya/tests/: README.md  __init__.py  test_embedded.py  test_embedded_cleanup.py  test_embedded_namespaces.py  test_server_integration.py
(+2978 files in other folders)
