[package]
name = "atulya-brain"
version = "0.1.0"
edition = "2021"
description = "Embedded runtime for Atulya sub_routine and brain.atulya cache operations"
license-file = "LICENSE"
repository = "https://github.com/eight-atulya/atulya"

[lib]
name = "atulya_brain"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
