[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atulya-cortex"
version = "0.1.0"
description = "Atulya Cortex - a biomimetic AI brain that uses atulya-embed as memory substrate, runs on small local LLMs, and connects via TUI / Telegram / WhatsApp."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atulya>=0.8.3",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "diskcache>=5.6.3",
    "python-dotenv>=1.0.0",
    "tomli-w>=1.0.0",
    "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
voice = ["pyttsx3>=2.90"]
lmstudio = []
optimize = ["dspy-ai>=2.4.0"]
textgrad = ["textgrad>=0.1.4"]
all = [
    "python-telegram-bot>=21.0",
    "pyttsx3>=2.90",
    "dspy-ai>=2.4.0",
    "textgrad>=0.1.4",
]

[project.scripts]
atulya-cortex = "cortex.cli:main_console"

[tool.uv.sources]
atulya = { workspace = true }

[tool.hatch.build.targets.wheel]
# Each top-level body-system package is its own importable top-level package.
# This is intentional and mirrors the biomimetic charter ("the directory tree
# IS the architecture diagram"). Other workspace members do not import these
# names, so the global-namespace concern does not apply.
packages = [
    "cortex",
    "sensors",
    "motors",
    "memory",
    "silo",
    "quantum",
    "brainstem",
    "dream",
    "plasticity",
]

[tool.hatch.build.targets.wheel.force-include]
# Bundled, user-facing templates need to ship inside the wheel so a freshly
# installed atulya-cortex can seed ~/.atulya/cortex/ without the source tree.
"cortex/templates" = "cortex/templates"
# The Node WhatsApp bridge ships alongside the wheel so `atulya-cortex
# whatsapp pair` finds it after a `pip install` (user still runs
# `npm install` once inside it).
"scripts/whatsapp-bridge" = "scripts/whatsapp-bridge"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "tests/",
    "brain.py",
    "brain/",
    "entanglement/",
    "tools/",
    "communication/",
    "consciousness/",
    "energy/",
    "evolution/",
    "infrastructure/",
    "integration/",
    "learning/",
    "timeline/",
    "blackbox/",
    "bridge/",
    "dump_yard/",
    "scripts/",
    "utils/directory_index.py",
    "utils/helpers.py",
    "utils/logging.py",
    "utils/__init__.py",
    "query_directory.py",
    "directory_index.json",
    "directory_structure.txt",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
]
ignore = [
    "E501",
    "E402",
    "F401",
    "F841",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
