[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atulya-all"
version = "0.8.3"
description = "Atulya: A living algorithm for machine intelligence (MI) - All-in-One Bundle"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atulya-api>=0.8.3",
    "atulya-client>=0.8.3",
    "atulya-embed>=0.8.3",
]

[tool.uv.sources]
atulya-api = { workspace = true }
atulya-client = { workspace = true }
atulya-embed = { workspace = true }

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["atulya"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
