[package]
name = "atulya-desktop"
version = "0.1.0"
edition = "2021"
authors = ["Atulya Team"]
description = "Desktop shell for Atulya — a living algorithm for machine intelligence (MI)."
license = "MIT"
rust-version = "1.77.2"

[lib]
name = "atulya_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "atulya-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"], default-features = false }
semver = { version = "1", features = ["serde"] }
toml = "0.8"
sysinfo = "0.33"
portable-atomic = "1"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
